Add: problem 3 solution

--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -36,9 +36,7 @@
 	 ********************** -->
 
     <header>
-	  <div id="api_status"
-	  style="float:right;height:40px;align-items:center:margin-right:30px;background-color:#cccccc">
-	  </div>
+	  <div id="api_status"</div>
     </header>
     <main>
       <div class="container">
