--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -13,6 +13,16 @@ header {
 	border-bottom: 1px solid #CCCCCC;
 }
 
+#api_status {
+    float: right;
+	height: 80px;
+	width: 80px;
+	vertical-align: center;
+	margin-right: 30px;
+	background-color: #cccccc;
+	border-radius: 50%;
+}
+
 .available {
 	background-color: #ff545f;
 }
