--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -36,7 +36,7 @@
 	 ********************** -->
 
     <header>
-	  <div id="api_status"</div>
+	  <div id="api_status"></div>
     </header>
     <main>
       <div class="container">
