fix: Adjusting weight and order of styles

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -14,10 +14,6 @@ header {
 }
 
 
-.available {
-	background-color: #ff545f;
-}
-
 #api_status {
     float: right;
 	height: 40px;
@@ -26,4 +22,9 @@ header {
 	margin-right: 30px;
 	background-color: #cccccc;
 	border-radius: 50%;
+}
+
+
+#api_status.available {
+        background-color: #ff545f;
 }
